# extremal-box-score

./: .gitignore  LICENSE  pyproject.toml
extremal_box_score/: classes.py  constants.py  extremal_box_score.py  filter_config.py  loaders.py  math.py  script.py  stat_line.py  utils.py
scripts/: update_box_scores.py
tests/: test_data.csv  test_extremal_box_score.py  test_stat_line.py
