[tool.poetry]
name = "extremal-box-score"
version = "0.1.0"
description = "Analyzing dominant stat lines in NBA history"
authors = ["Joel Barnes <oelarnes@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "extremal_box_score"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.0"
scipy = "^1.9.3"
basketball-reference-web-scraper = "^4.12.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
